--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 body{
     margin: 0;
     font-size: 16px;
-    background-color:#009688 ;
+     background-color:#009688 ; 
+   
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
@@ -14,10 +15,17 @@ body{
     padding: 0;
     outline: none;
 }
+.logo{
+    background-image: url('/img/logo.png');
+    height: 220px;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-top: -50px;
+}
 
 .custom-box{
     max-width: 700px;
-    background-color:#ffffff;
+    background-color:#ffffff; 
     margin:40px auto ;
     padding: 30px;
     border-radius: 10px ;
@@ -252,3 +260,24 @@ background-position: center;
     }
 }
 
+.formu{
+    /* border: 1px solid red; */
+    
+    margin-bottom: 10px;
+} 
+.name{
+    margin-right: 6px;
+}
+.formulario{
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input{
+    height: 25px;
+}
+.logo2{
+    background-image: url('/img/logo2.png');
+    border: 1px solid red;
+}
