--- a/estilo.css
+++ b/estilo.css
@@ -20,6 +20,7 @@ background-repeat: no-repeat;
     margin-top: 20px;
 }
 
+
 /* Navbar */
 .navbar.navbar-expand-lg{
 background-color: #776eac;
@@ -95,6 +96,7 @@ ul.menu{
 
 .img{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     
 }
@@ -105,3 +107,22 @@ ul.menu{
     
 }
 
+@media(max-width:768px){
+    body{
+        width: 100%;
+    }
+.logo2,.logo1, .twitter, .tabla-menu{
+    display: none;
+}
+/* .img{
+    display: flex;
+    flex-direction: column;
+} */
+.enlace-nivel{
+   margin: auto;
+   margin-bottom: 10px;
+}
+.informacion{
+    max-width: 100%;
+}
+}
